--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>J's Prime Construction</title>
     <link rel="shortcut icon" href="/Images/logo-homepage.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -52,24 +53,22 @@
     </div>
 
     <div class="container d-flex justify-content-evenly align-middle my-5  py-5">
-        <div class="container d-block" id="body-container">
-            <!-- Services Section Start -->
-            <div class="container head-container mb-4" id="services">
-                <h2><b>What can we do for you?</b></h2>
+        <div class="service-wrap">
+            <div class="container d-block" id="body-container">
+                <!-- Services Section Start -->
+                <div class="container head-container mb-4" id="services">
+                    <h2><b>What can we do for you?</b></h2>
+                </div>
+                <div class="container-fluid para-container d-flex flex-column justify-content-start m-0">
+                    <p class="services-p">
+                        With our team of veteran specialists, we can help you construct, maintain, and repair your office in any field, industry, and aspect with our Civil Construction and Interior Design services. For start-up entrepreneurs and veteran businessmen who want to put up or improve their workplace, our lead consultants will provide expert advice on how to effectively implement any renovation requirements as well as execute the job with minimal delay.
+                    </p>
+                    <p class="services-p">
+                        Never again will you have to take unnecessary risks with safety hazards in the office or tolerate inconveniences from broken facilities. Let us help you live an easier life by actualizing your dreams of working in a safe and relaxing environment.
+                    </p>
+                </div>
+                <!-- Services Section End -->
             </div>
-            <div class="container para-container d-flex flex-column justify-content-start m-0" style="width: 80%;">
-                <p>
-                    With our team of veteran specialists, we can help you construct, maintain, and repair your office in any field, industry, and aspect with our Civil Construction and Interior Design services. For start-up entrepreneurs and veteran businessmen who want to put up or improve their workplace, our lead consultants will provide expert advice on how to effectively implement any renovation requirements as well as execute the job with minimal delay.
-                </p>
-                <br>
-                <p>
-                    Never again will you have to take unnecessary risks with safety hazards in the office or tolerate inconveniences from broken facilities. Let us help you live an easier life by actualizing your dreams of working in a safe and relaxing environment.
-                </p>
-            </div>
-            <!-- Services Section End -->
-        </div>
-        <div class="logo-container m-auto">
-            <img src="/Images/logo-homepage.png" alt="J's Prime Logo">
         </div>
     </div>
     <!-- Home Section End -->
@@ -169,25 +168,25 @@
                     <p>With years of experience in delivering top-notch heavy equipment solutions, we pride ourselves on our commitment to excellence and customer satisfaction. Our dedicated team ensures that every project is executed with precision and reliability, meeting the highest industry standards. Trust us to provide the best equipment and support for all your needs, backed by our proven track record of quality and professionalism.</p>
                 </div>
         </div>
-        <div class="container-fluid d-flex justify-content-evenly equipment-box" style="width: 80%; margin-left: 5rem; margin-right: auto;">
+        <div class="container-fluid d-flex justify-content-evenly equipment-box">
             <div class="container mb-3 boxes">
-                <img src="/Images/material.jpg" alt="j's prime kitchen" style="width: 280px; height: 380px;">
+                <img src="/Images/material.jpg" alt="j's prime kitchen">
             </div>
             <div class="container mb-3 boxes">
-                <img src="/Images/equipment material.jpg" alt="j's prime materials" style="width: 280px; height: 380px;">
+                <img src="/Images/equipment material.jpg" alt="j's prime materials">
             </div>
             <div class="container mb-3 boxes">
-                <img src="/Images/equipment materials.jpg" alt="j's prime kitchen" style="width: 280px; height: 380px;">
+                <img src="/Images/equipment materials.jpg" alt="j's prime kitchen">
             </div>
             <div class="container mb-3 boxes">
-                <img src="/Images/heavy materials.jpg" alt="j's prime kitchen" style="width: 280px; height: 380px;">
+                <img src="/Images/heavy materials.jpg" alt="j's prime kitchen">
             </div> 
         </div>
 
-        <div class="container-sm mt-5 text-container">
+        <div class="container-sm mt-4 text-container service-text">
             <h3><b>We work in our outmost best for our dear customer and clients</b></h3>
         </div>
-        <div class="container-fluid mb-2 mt-5 d-flex align-items-center justify-content-evenly service-container">
+        <div class="container-fluid mb-2 d-flex align-items-center justify-content-evenly service-container">
             <div class="container-sm mb-4 mt-4 full-service">
                 <div class="container-sm">
                 <h5><b>Full service</b></h5>
@@ -285,7 +284,7 @@
             <h1><b>We'd like to hear from you</b></h1>
         </div>
         <div class="container body-container">
-            <h3><strong>Inquiries? Concerns? Suggestions?</strong> Let us know and we will get back to you in 1 to 3 business days.</h3>
+            <h3><strong>Inquiries? Concerns? Suggestions?</strong><span>Let us know and we will get back to you in 1 to 3 business days.</span></h3>
         </div>
         <div class="container input-container mt-4">
             <div class="mb-3">
@@ -312,7 +311,7 @@
     <!-- End Contact Us Section -->
 
     <!-- Footer Section Start -->
-    <footer class="container-fluid bg-dark d-flex justify-content-evenly pe-4" id="contact-us">
+    <footer class="container-fluid footer-cover bg-dark d-flex justify-content-evenly pe-4" id="contact-us">
         <div class="container footer-container d-flex flex-column">
             <div>
                 <h4>FIND US</h4>
@@ -343,7 +342,7 @@
                 </div>
             </div>
         </div>
-        <div class="container footer-container d-flex flex-column">
+        <div class="container footer-container d-flex flex-column hours">
             <h4>HOURS</h4>
             <p class="mt-4 opacity-75" style="color: whitesmoke;">Monday - Friday:  9:00 AM – 5:00 PM</p>
         </div>
@@ -373,7 +372,7 @@
     </footer>
     <!-- Footer Section End -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/Pages/index.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="/Pages/index.js"></script>
 </body>
 </html>
