--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <h3><b>We work in our outmost best for our dear customer and clients</b></h3>
         </div>
         <div class="container-fluid mb-2 d-flex align-items-center justify-content-evenly service-container">
-            <div class="container-sm mb-4 mt-4 full-service">
+            <div class="container-sm mb-3 mt-4 full-service">
                 <div class="container-sm">
                 <h5><b>Full service</b></h5>
                 <i class="fas fa-tools"></i>
@@ -312,7 +312,7 @@
 
     <!-- Footer Section Start -->
     <footer class="container-fluid footer-cover bg-dark d-flex justify-content-evenly pe-4" id="contact-us">
-        <div class="container footer-container d-flex flex-column">
+        <div class="container footer-container find d-flex flex-column">
             <div>
                 <h4>FIND US</h4>
             </div>
@@ -356,11 +356,13 @@
             </div>
             <div class="container">
                 <h4>PRIVACY AND SECURITY</h4>
-                <p class="m-0 opacity-75" style="color: whitesmoke;">Privacy Policy</p>
-                <p class="m-0 opacity-75" style="color: whitesmoke;">Web Linking Practices</p>
+                <div class="ps">
+                    <p class="m-0 opacity-75 ps" style="color: whitesmoke;">Privacy Policy</p>
+                    <p class="m-0 opacity-75 ps" style="color: whitesmoke;">Web Linking Practices</p>
+                </div>
             </div>
         </div>
-        <div class="container footer-container copyright-container d-flex flex-column" style="color: whitesmoke; align-items: end;">
+        <div class="container footer-container copyright-container d-flex flex-column" style="color: whitesmoke;">
             <img src="/Images/logo-homepage.png" alt="LOGO" class="mb-2" style="width: 50px; height: 50px;">
             <p class="m-0" style="border-top: 2px solid whitesmoke;">
                 Copyright J’s Prime Construction
