--- a/index.html
+++ b/index.html
@@ -316,28 +316,30 @@
             <div>
                 <h4>FIND US</h4>
             </div>
-            <div style="color: whitesmoke;" class="d-flex mt-4">
-                <h5 class="me-3">Address</h5>
-                <div class="d-block opacity-75">
-                    <p class="m-0">2301 Civic Drive</p>
-                    <p class="m-0">Filinvest Corporate City Alabang</p>
-                    <p class="m-0">Muntinlupa City, Philippines 1781</p>
-                </div>
-            </div>
-            <div style="color: whitesmoke;" class="d-flex mt-4">
-                <div class="d-flex">
-                    <h5 class="me-3">Contact</h5>
+            <div class="address">
+                <div style="color: whitesmoke;" class="d-flex mt-4">
+                    <h5 class="me-3">Address</h5>
                     <div class="d-block opacity-75">
-                        <p class="m-0">Landline:(02)8788-1613</p>
-                        <p class="m-0">Mobile: (0917)551-0987</p>
+                        <p class="m-0">2301 Civic Drive</p>
+                        <p class="m-0">Filinvest Corporate City Alabang</p>
+                        <p class="m-0">Muntinlupa City, Philippines 1781</p>
                     </div>
                 </div>
-            </div>
-            <div style="color: whitesmoke;" class="d-flex mt-4">
-                <div class="d-flex">
-                    <h5 class="me-3">Email</h5>
-                    <div class="d-block opacity-75">
-                        <p class="m-0">info.jsconstructionandtrading.com</p>
+                <div style="color: whitesmoke;" class="d-flex mt-4">
+                    <div class="d-flex">
+                        <h5 class="me-3">Contact</h5>
+                        <div class="d-block opacity-75">
+                            <p class="m-0">Landline:(02)8788-1613</p>
+                            <p class="m-0">Mobile: (0917)551-0987</p>
+                        </div>
+                    </div>
+                </div>
+                <div style="color: whitesmoke;" class="d-flex mt-4">
+                    <div class="d-flex">
+                        <h5 class="me-3">Email</h5>
+                        <div class="d-block opacity-75 info">
+                            <p class="m-0">info.jsconstructionandtrading.com</p>
+                        </div>
                     </div>
                 </div>
             </div>
