--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="service-wrap">
             <div class="container d-block" id="body-container">
                 <!-- Services Section Start -->
-                <div class="container head-container mb-4" id="services">
+                <div class="container head-container mb-5" id="services">
                     <h2><b>What can we do for you?</b></h2>
                 </div>
                 <div class="container-fluid para-container d-flex flex-column justify-content-start m-0">
@@ -168,17 +168,17 @@
                     <p>With years of experience in delivering top-notch heavy equipment solutions, we pride ourselves on our commitment to excellence and customer satisfaction. Our dedicated team ensures that every project is executed with precision and reliability, meeting the highest industry standards. Trust us to provide the best equipment and support for all your needs, backed by our proven track record of quality and professionalism.</p>
                 </div>
         </div>
-        <div class="container-fluid d-flex justify-content-evenly equipment-box">
-            <div class="container mb-3 boxes">
+        <div class="container-fluid d-flex equipment-box">
+            <div class="container boxes">
                 <img src="/Images/material.jpg" alt="j's prime kitchen">
             </div>
-            <div class="container mb-3 boxes">
+            <div class="container boxes">
                 <img src="/Images/equipment material.jpg" alt="j's prime materials">
             </div>
-            <div class="container mb-3 boxes">
+            <div class="container boxes">
                 <img src="/Images/equipment materials.jpg" alt="j's prime kitchen">
             </div>
-            <div class="container mb-3 boxes">
+            <div class="container boxes">
                 <img src="/Images/heavy materials.jpg" alt="j's prime kitchen">
             </div> 
         </div>
@@ -187,7 +187,7 @@
             <h3><b>We work in our outmost best for our dear customer and clients</b></h3>
         </div>
         <div class="container-fluid mb-2 d-flex align-items-center justify-content-evenly service-container">
-            <div class="container-sm mb-3 mt-4 full-service">
+            <div class="container-sm mb-3 mt-3 full-service">
                 <div class="container-sm">
                 <h5><b>Full service</b></h5>
                 <i class="fas fa-tools"></i>
