--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Projects Section Start -->
     <div class="container-fluid landing m-0 p-0" id="projects">
         <div class="sub-container d-block m-0">
-            <div class="pagelanding-container d-flex flex-column justify-content-center align-items-center">
+            <div class="pagelanding-container landing-project d-flex flex-column justify-content-center align-items-center">
                 <div class="container text-center">
                     <img src="/Images/logo-pages.png" alt="LOGO">
                 </div>
@@ -135,7 +135,7 @@
     <!-- Heavy Equipment Section Start -->
     <div class="container-fluid landing m-0 p-0" id="equipment">
         <div class="sub-container d-block m-0">
-            <div class="pagelanding-container d-flex flex-column justify-content-center align-items-center">
+            <div class="pagelanding-container landing-equipments d-flex flex-column justify-content-center align-items-center">
                 <div class="container text-center">
                     <img src="/Images/logo-pages.png" alt="LOGO">
                 </div>
@@ -215,7 +215,7 @@
     <!-- About Us Section Start-->
     <div class="container-fluid landing m-0 p-0" id="about">
         <div class="sub-container d-block m-0">
-            <div class="pagelanding-container d-flex flex-column justify-content-center align-items-center">
+            <div class="pagelanding-container landing-about d-flex flex-column justify-content-center align-items-center">
                 <div class="container text-center">
                     <img src="/Images/logo-pages.png" alt="LOGO">
                 </div>
