--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="text-container text-center mt-5 p-3">
                 <h1><b>DESIGN. CONSTRUCT.</b></h1>
                 <h1><b>MAINTAIN. REPAIR.</b></h1>
-                <h1><b>HEAVY EQUIPMENT.</b></h1>
+                <h1><b>HEAVY EQUIPMENT RENTAL.</b></h1>
             </div>
         </div>
         <div class="drop-down d-flex justify-content-center align-self-end">
