--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
         </div>
         <div class="drop-down d-flex justify-content-center align-self-end">
             <a href="#services">
-                <i class="fa-solid fa-circle-chevron-down"></i>
+                <i class="fa-solid fa-circle-chevron-down move"></i>
             </a>
+        </div>
+        <div class="container scroll text-center" style="color: white; font-family: 'Montserrat';">
+            <span>scroll down to view content</span>
         </div>
     </div>
 
@@ -87,7 +90,7 @@
         </div>
         <div class="drop-down d-flex justify-content-center align-self-end">
             <a href="#projects-body">
-                <i class="fa-solid fa-circle-chevron-down"></i>
+                <i class="fa-solid fa-circle-chevron-down move"></i>
             </a>
         </div>
     </div>
@@ -146,7 +149,7 @@
         </div>
         <div class="drop-down d-flex justify-content-center align-self-end">
             <a href="#equipments">
-                <i class="fa-solid fa-circle-chevron-down"></i>
+                <i class="fa-solid fa-circle-chevron-down move"></i>
             </a>
         </div>
     </div>
@@ -226,7 +229,7 @@
         </div>
         <div class="drop-down d-flex justify-content-center align-self-end">
             <a href="#mission">
-                <i class="fa-solid fa-circle-chevron-down"></i>
+                <i class="fa-solid fa-circle-chevron-down move"></i>
             </a>
         </div>
     </div>
@@ -274,7 +277,7 @@
         </div>
         <div class="drop-down d-flex justify-content-center align-self-end">
             <a href="#contact">
-                <i class="fa-solid fa-circle-chevron-down"></i>
+                <i class="fa-solid fa-circle-chevron-down move"></i>
             </a>
         </div>
     </div>
